<resources>
    <string name="app_name">Practica2</string>
    <string name="password_hint">Ingresa tu password</string>
    <string name="datos_hint">Ingresa tus datos</string>
    <string name="nombreusuario_hint">Nombre de usuario</string>
    <string name="password">Password</string>
    <string name="edad">Edad</string>
    <string name="genero">Genero</string>
    <string name="correoe">Correo electronico</string>
    <string name="nombre">Nombre</string>
    <string name="aPaterno">Apellido Paterno</string>
    <string name="aMaterno">Apellido Materno</string>
    <string name="ingdatos">Ingresa tus datos para registrarte</string>

    <string name="iniciarsesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="atras">atras </string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="buttonsend">Enviar</string>
    <string name="bienvenidousuario">Bienvenido Usuario</string>
    <string name="modificadatos">Modifica tus datos</string>
    <string name="bienvenidoadmin">Bienvenido Administrador</string>
    <string name="consultausuarios">Consulta usuarios</string>
    <string name="deleteusuario">Elimina un usuario</string>
    <string name="id_usuario">ID_usuario</string>


    <string name="title_activity_admin_vista_layouts">AdminVistaLayoutsActivity</string>
    <string name="title_activity_vista_usuario_layouts">VistaUsuarioActivityLayouts</string>
    <string name="title_activity_vista_admin_layouts">VistaAdminActivityLayouts</string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="title_activity_update_user">UpdateUserActivity</string>
    <string name="title_activity_read_user">ReadUserActivity</string>
    <string name="title_activity_delete_user">DeleteUserActivity</string>
    <string name="eliminar_usuario">Eliminar usuario</string>
    <string name="leer_datos">Leer datos</string>
    <string name="cambiar_datos_de_usuario">Cambiar datos de usuario</string>
    <string name="crear_usuario">crear usuario</string>
    <string name="title_activity_vista_usuario">VistaUsuarioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_vista_admin">VistaAdminActivity</string>
    <string name="elige">Elige una operacion</string>
    <string name="buttonread">Buscar usuarios</string>
    <string name="actualizardatos">Actualizar datos</string>
    <string name="cerrarsesion">Cerrar sesion</string>
    <string name="elige_una_actividad">Elige una actividad</string>
    <string name="inicia_sesion_en_el_navegador">Inicia sesion en el navegador</string>
    <string name="formulario_de_crear_usuario">Formulario de Crear Usuario</string>
    <string name="proyecto">proyecto</string>
    <string name="agregarimagen">agregarimagen</string>
    <string name="usuario">Usuario</string>
    <string name="administrador">Administrador</string>
    <string name="coloca_al_usuario_al_que_deseas_cambiar_los_datos">Coloca al usuario al que deseas cambiar los datos</string>
    <string name="cambia_los_datos">Cambia los datos</string>
    <string name="title_activity_update_only_user">UpdateOnlyUserActivity</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="id_usuariotexto">ID Usuario:</string>
    <string name="title_activity_cerrar_sesion">CerrarSesionActivity</string>
    <string name="paranoid_android">Paranoid Android</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="title_activity_webvieweruser">webvieweruser</string>
    <string name="title_activity_principal_project">PrincipalProjectActivity</string>
    <string name="title_activity_show_activityproject">ShowActivityproject</string>
    <string name="title_activity_tv_maze_api">TvMazeApi</string>
    <string name="title_activity_show_adapter">ShowAdapter</string>
    <string name="starring">Starring:</string>
    <string name="buscar_series">Buscar series...</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_app_database">AppDatabase</string>
    <string name="title_activity_search_history">SearchHistory</string>
    <string name="title_activity_my_cookie_manager">MyCookieManager</string>
    <string name="title_activity_show_detail">ShowDetailActivity</string>
    <string name="title_activity_season_adapter">SeasonAdapter</string>
    <string name="title_activity_episode_adapter">EpisodeAdapter</string>
    <string name="add_to_favorites">add_favorites</string>
    <string name="favoritos">favoritos</string>
    <string name="title_activity_favorite_manager">FavoriteManager</string>
    <string name="title_activity_favoritos_data_class">FavoritosDataClass</string>
    <string name="title_activity_favorite_data_class">FavoriteDataClass</string>
    <string name="title_activity_favorite_adapter">FavoriteAdapter</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="historial">Historial y Favoritos</string>
    <string name="buscar_favs">Buscar favoritos e historial de un usuario</string>
    <string name="search_query">Search Query:</string>
    <string name="search_date">Search Date:</string>
    <string name="title_activity_historial_favs">HistorialFavsActivity</string>
    <string name="title_activity_badapter_fav">BAdapterFav</string>
    <string name="title_activity_badapter_search">BAdapterSearch</string>
    <string name="favoritos_1">Favoritos</string>
    <string name="Historial">Historial</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="title_activity_recomendaciones">RecomendacionesActivity</string>
    <string name="title_activity_recomendacion_adapter">RecomendacionAdapter</string>
    <string name="PeliClick">PeliClick\n</string>
    <string name="buscar">Buscar</string>
    <string name="cambiar_datos">Cambiar datos</string>
    <string name="navegador">Navegador</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>


    <!-- Admin vista -->


</resources>