<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:ignore="DisableBaselineAlignment">

        <!-- Contenido del usuario -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aPaterno"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aMaterno"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correoe"
                android:textSize="14sp"
                android:textColor="#757575" />

            <TextView
                android:id="@+id/textViewEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textSize="14sp"
                android:textColor="#757575" />

            <TextView
                android:id="@+id/textViewGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textSize="14sp"
                android:textColor="#757575" />

            <TextView
                android:id="@+id/textViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_usuario"
                android:textSize="14sp"
                android:textColor="#757575" />

            <TextView
                android:id="@+id/textViewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="14sp"
                android:textColor="#757575" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>