<?xml version="1.0" encoding="utf-8"?>
<!-- Vista por parte del administrador para cambiar los datos de un usuario -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/operaciones">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/bit"
                android:gravity="center"
                android:hint="@string/actualizardatos"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="35sp" />



            <TextView
                android:id="@+id/textView3"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/bit"
                android:gravity="center"
                android:hint="@string/cambia_los_datos"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:ems="10"
                android:fontFamily="@font/bit"
                android:hint="@string/nombre"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/apellidoP"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="name"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/aPaterno"
                android:inputType="text"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <!-- apellido materno -->
            <EditText
                android:id="@+id/apellidoM"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="name"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/aMaterno"
                android:inputType="text"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <!-- email -->
            <EditText
                android:id="@+id/correo"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/correoe"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <!-- genero -->
            <EditText
                android:id="@+id/genero"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/genero"
                android:inputType="text"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/edad"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/edad"
                android:inputType="number"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/userU"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/bit"
                android:hint="@string/nombreusuario_hint"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textViewpassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/black"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/passwordU"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="152dp"
                android:layout_height="155dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/agregarimagen"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/iconoimagen" />
            <!-- muestra texto ingresar datos -->


            <Button
                android:id="@+id/buttonsend"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="#2F9032"
                android:fontFamily="@font/bit"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/buttonsend" />




        </LinearLayout>
    </ScrollView>
</RelativeLayout>
