<?xml version="1.0" encoding="utf-8"?>
<!-- Vista por parte del administrador para crear un usuario -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/operaciones">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2196F3"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <TextView
                android:id="@+id/bienvenidoadmin"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/crear_usuario"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/bit"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:autofillHints="name"
                android:ems="10"
                android:textSize="20sp"
                android:fontFamily="@font/bit"
                android:hint="@string/nombre"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/apellidoP"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="name"
                android:textColorHint="@color/black"
                android:ems="10"
                android:textSize="20sp"
                android:hint="@string/aPaterno"
                android:inputType="text"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:layout_marginTop="16dp" />

            <!-- apellido materno -->
            <EditText
                android:id="@+id/apellidoM"
                android:layout_width="349dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="name"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/aMaterno"
                android:inputType="text"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:layout_marginTop="16dp" />

            <!-- email -->
            <EditText
                android:id="@+id/correo"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/correoe"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <!-- genero -->
            <EditText
                android:id="@+id/genero"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/genero"
                android:inputType="text"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/edad"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/edad"
                android:inputType="number"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/userU"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:textColorHint="@color/black"
                android:ems="10"
                android:hint="@string/nombreusuario_hint"
                android:inputType="text"
                android:minHeight="48dp"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/textViewpassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/black"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/passwordU"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                android:fontFamily="@font/bit"
                android:textSize="20sp"
                android:layout_marginTop="16dp" />
            <!-- muestra texto ingresar datos -->

            <RadioGroup
                android:id="@+id/radioGroup"
                android:textColorHint="@color/black"
                android:fontFamily="@font/bit"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bit"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/administrador" />

                <RadioButton
                    android:id="@+id/radioUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bit"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/usuario" />

            </RadioGroup>
            <Button
                android:id="@+id/buttonsend"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:backgroundTint="#193590"
                android:fontFamily="@font/bit"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/buttonsend" />




        </LinearLayout>
    </ScrollView>
</RelativeLayout>